--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "query-string": "6.14.1",
     "react": "^18.2.0",
